--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "uuidv4": "^6.2.13",
     "world-countries": "^5.0.0",
     "xlsx": "^0.18.5",
